i got list items to work somewhat

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -11,7 +11,7 @@
     width: 720px;
     background-color: #E5F4EC;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 
 .dash_header {
